@@ -2,7 +2,9 @@ Version - 3.0.1 -
 -Post CRAN release version - adding Pete Wagner's functions relating to measuring character exhaustation, added Pete to the authors for paleotree.
 -Added another cladogram (an MPT from a 13-taxon analysis) to SongZhangDicrano example dataset
 -Added argument verboseWarnings to cal3 functions, modified previous 'warnings' (actually used function for messages) to warnings
+-Added new function nodeDates2branchLengths, so that node and tip ages can be used to obtain edge lengths, in absolute time, for undated trees, at suggestion of Struan Henderson
 -
+
 
 Version - 3.0.0 - 10-20-17
 -Released to CRAN after a long hiatus from new CRAN releases.
